Fixed Z-index interface errors

--- a/css/index.scss
+++ b/css/index.scss
@@ -124,7 +124,7 @@ body {
     top: 78vh;
     left: auto;
     font-size: 85px;
-    z-index: 11;
+    z-index: 15;
 }
 
 .us {
@@ -287,7 +287,7 @@ body {
     // top: 70px;
     font-family: 'alba_matterregular';
     cursor: pointer;
-    z-index: 2;
+    z-index: 20;
     transition: 0.3s ease-in-out;
     &:hover{
         color: $white;
@@ -474,7 +474,7 @@ body {
     left: 10vw;
     top: 10vh;
     height: 80vh;
-    z-index: 10;
+    z-index: 20;
     width: 80vw;
     border-radius: 150px;
     background: linear-gradient(135deg, rgba(237, 227, 242, 1) 0%, rgba(242, 179, 190, 1) 100%);
@@ -1033,7 +1033,7 @@ svg{
     font-size: 4vh;
     // background: $red;
     font-family: 'Work Sans',sans-serif;
-    z-index: 3;
+    z-index: 20;
     font-weight: 700;
     a{
         color: $white !important;
